--- a/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.html
+++ b/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.html
@@ -31,16 +31,28 @@
 
 
 
-                <mat-form-field class="parentCatalogId" appearance="fill">
+                <!-- <mat-form-field class="parentCatalogId" appearance="fill">
                     <mat-label>parentCatalogId</mat-label>
                     <input matInput type="number" formControlName="parentCatalogId">
                     <div *ngIf="submitted && addnewcatalogform.get('parentCatalogId').invalid">
-                        <!-- <div *ngIf="productForm.get('productName').errors.required"> Product Name is required.</div> -->
+
                     </div>
-                </mat-form-field>
+                </mat-form-field> -->
+                <mat-form-field class="parentCatalogId" appearance="fill">
+                    <mat-label>Select ParentCatalog</mat-label>
+                    <mat-select formControlName="parentCatalogId">
+                      <mat-option *ngFor="let item of parentcatalogdata" [value]="item.catalogId">
+                        {{item.catalogName}}
+                      </mat-option>
+            
+                      <div *ngIf="submitted && addnewcatalogform.get('catalogId').invalid">
+                        <!-- <div *ngIf="productForm.get('manufacturerId').errors.required"> Select Vendor Name.</div> -->
+                      </div>
+                    </mat-select>
+                  </mat-form-field>
             </div>
-         
-           
+
+
 
         </div>
 
