--- a/src/app/modules/admin/components/staff-list/staff-list.component.html
+++ b/src/app/modules/admin/components/staff-list/staff-list.component.html
@@ -29,11 +29,11 @@
         </ng-container>
         <ng-container matColumnDef="startDt">
             <th mat-header-cell *matHeaderCellDef>Start Date</th>
-            <td mat-cell *matCellDef="let element">{{element.startDt}}</td>
+            <td mat-cell *matCellDef="let element">{{element.startDt | date}}</td>
         </ng-container>
         <ng-container matColumnDef="endDt">
             <th mat-header-cell *matHeaderCellDef>End Date</th>
-            <td mat-cell *matCellDef="let element">{{element.endDt}}</td>
+            <td mat-cell *matCellDef="let element">{{element.endDt | date}}</td>
         </ng-container>
         <ng-container matColumnDef="Actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
