some changes done on update staff component...

--- a/src/app/modules/admin/components/update-product/update-product.component.html
+++ b/src/app/modules/admin/components/update-product/update-product.component.html
@@ -13,7 +13,7 @@
         <div class="col-3">
           <label class="form-label">Product Id:</label>
           <input type="text" class="form-control" [(ngModel)]="productdata.productId" formControlName="productId"
-            placeholder="{{productdata.productId}}">
+            placeholder="{{productdata.productId}}" readonly id="productid">
 
         </div>
         <div class="col-3">
