--- a/src/app/modules/admin/components/update-product/update-product.component.scss
+++ b/src/app/modules/admin/components/update-product/update-product.component.scss
@@ -29,6 +29,9 @@
     margin-left: 150px;
     margin-top: 10px;
 }
+#productid{
+    cursor: not-allowed;
+}
 @media screen and (min-width: 500px) and (max-width: 1350px) {
 
     .dialog-content{
