--- a/src/app/modules/admin/components/product-view/product-view.component.html
+++ b/src/app/modules/admin/components/product-view/product-view.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div>
-      <button type="button" class="btn btn-dark"  (click)="onSelect()" id="addnewproductskubtn">Add New Product
+      <button type="button" class="btn btn-dark"  (click)="onSelect(productData.productId)" id="addnewproductskubtn">Add New Product
         Sku</button>
 
     </div>
