--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
@@ -14,7 +14,7 @@
 
                     <b>OrderId:</b>
                     <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}"
-                            [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}"></p>
+                            [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}" readonly></p>
                     <b>Name
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
                     <p>{{Orderdetails.firstName}}</p>
