--- a/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.html
+++ b/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.html
@@ -16,7 +16,7 @@
                      <b>Order Track Ref:</b>
                      <p>{{Orderdetails.orderTrackRef}}</p>
                     <b>OrderId:</b>
-                    <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}" [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}"></p> 
+                    <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}" [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}" readonly></p> 
                     <b>Name
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
                     <p>{{Orderdetails.firstName}}</p>
