--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -197,7 +197,10 @@
 #productId{
   cursor: not-allowed;
 }
-  
+  #selectoptions{
+    margin-left: 1000px;
+    margin-top: -60px;
+  }
   
   @media only screen and (max-width: 800px) {
    
